[workspace]
members = [
    "programs/*"
]
resolver = "2"

# Fix dependency versions to prevent incompatible updates
# Note: blake3 and constant_time_eq versions are fixed in Cargo.lock manually

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
